# redcon

./: CHANGELOG.md  README.md  action.yml  pilot-readiness.md  pyproject.toml
.github/wiki/: CLI-Reference.md  Configuration.md  Getting-Started.md  Workspace.md
.github/workflows/: populate-wiki.yml  redcon-pr-audit.yml  redcon.yml  release.yml  test.yml
context-eval/: README.md  run.py
context-eval/contexteval/: __init__.py  adapters.py  report.py  runner.py  tasks.py
context-eval/results/: results.json  results.md
docs/: cache.md  cli.md  configuration.md  deployment.md  gateway.md  getting-started.md  index.md  mcp-and-hooks.md  token-estimation.md  workspace.md
examples/ci/: redcon-ci.yml
examples/workspaces/: app-shared-library.toml  two-service-backend.toml
redcon/: __init__.py  cli.py  engine.py  entitlements.py
redcon-cloud/: requirements.txt
redcon/cache/: backends.py
redcon/compressors/: symbols.py
redcon/core/: doctor.py  pipeline.py  render.py
redcon/gateway/: server.py
redcon/mcp/: install.py  instructions.py  server.py
redcon/runtime/: session.py
redcon/schemas/: models.py
redcon/scorers/: import_graph.py
redcon/stages/: workflow.py
tests/: test_agent_instructions.py  test_claude_hooks.py  test_cost_savings.py  test_doctor.py  test_entitlements.py  test_first_run_fixes.py  test_gateway_auth.py  test_gateway_session_store.py  test_import_graph_cache.py  test_mcp_install.py  test_pack_pipeline.py  test_selection_savings.py  test_symbol_extraction.py
vscode-redcon/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json
vscode-redcon/src/: commands.ts  extension.ts  redcon.ts  setup.ts  state.ts  statusBar.ts  types.ts
vscode-redcon/src/webview/: controlView.ts  controlViewHtml.ts  dashboardHtml.ts  dashboardPanel.ts
