[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redcon"
version = "1.11.1"
description = "Deterministic context budgeting for coding-agent workflows"
readme = "README.md"
keywords = [
    "ai-agents",
    "claude-code",
    "context-compression",
    "context-engineering",
    "cursor",
    "developer-tools",
    "llm",
    "mcp",
    "token-optimization",
]
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Natalia Szczepanik" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/natiixnt/redcon"
Repository = "https://github.com/natiixnt/redcon"
Issues = "https://github.com/natiixnt/redcon/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "fakeredis>=2.0", "redis>=5.0", "cryptography>=42"]
# Offline verification of Pro license keys. Free installs never need this;
# the core stays dependency-free and only imports cryptography when a license
# is actually present.
pro = ["cryptography>=42"]
tokenizers = ["tiktoken>=0.7"]
redis = ["redis>=5.0"]
gateway = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
mcp = ["mcp>=1.0"]
# Tree-sitter symbol extraction for redcon repo-map / improved file context.
# We list per-language wheels because tree-sitter-language-pack still ships
# broken wheels on Python 3.14 ARM (RECORD-only, no package payload).
symbols = [
    "tree-sitter>=0.22",
    "tree-sitter-python>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-ruby>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
]
# Structural code search via ast-grep. The CLI binary on PATH (brew /
# cargo install) is preferred; the python wheel is the backup.
ast_grep = ["ast-grep-py>=0.30"]
# LLMLingua-2 semantic compression fallback. Heavy: pulls torch +
# transformers + a 280 MB BERT-base checkpoint at first use.
heavy_compression = ["llmlingua>=0.2.0"]

[project.scripts]
redcon = "redcon.cli:main"
redcon-gateway = "redcon.gateway.server:run_gateway"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# "redcon*" alone would also match hyphenated sibling directories
# and ship them in the wheel; keep the explicit include list.
include = ["redcon", "redcon.*"]
namespaces = false

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["benchmarks", "examples"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["redcon"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
